# BIG

beranek-mongo/: .env  Dockerfile.dev  Dockerfile.prod  README.md  data.csv  docker-compose.base.yml  docker-compose.dev.yml  launch.json  pyproject.toml
beranek-mongo/.devcontainer/: devcontainer.json
beranek-mongo/src/: __main__.py
beranek-mongo/src/templates/: form.html  index.html  recipes.html  template.html
beranek-neo4j/: Dockerfile.dev  Dockerfile.prod  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
beranek-neo4j/src/: __main__.py  entities.py  init.py
beranek-neo4j/src/templates/: home.html  matches.html  template.html
beranek-streamlit/: .env  .env.prod  Dockerfile.dev  LICENSE  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
beranek-streamlit/.devcontainer/: devcontainer.json
beranek-streamlit/src/: __main__.py
beranek-streamlit/src/db/: __init__.py  db_schema.py
fiser-meteo-mrjob/: Dockerfile.dev  README.md  docker-compose.base.yml  docker-compose.dev.yml
fiser-meteo-mrjob/.devcontainer/: devcontainer.json
fiser-meteo-mrjob/src/: __main__.py
fiser-meteo-pyspark/: Dockerfile  docker-compose.yml  pyproject.toml  start-spark.sh
fiser-meteo-pyspark/src/: __main__.py
fiser-mongo/: Dockerfile.dev  Dockerfile.prod  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
fiser-mongo/src/: __main__.py  init.py
