[tool.poetry]
name = "big"
version = "0.1.0"
description = ""
authors = ["David Holý <david.holy225@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
streamlit = "*"
psycopg2 = "*"
debugpy = "*"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
