[tool.poetry]
name = "meteo2"
version = "0.1.0"
description = ""
authors = ["David Holý <david.holy225@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
pyarrow = "^14.0.1"
plotly = "^5.18.0"
grpcio = "^1.59.3"
google = "^3.0.0"
google-cloud = "^0.34.0"
google-cloud-vision = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
